tests/models/struct/u64/fail/ge.rs
use dade::model;
#[model]
struct TestModel {
    #[field(ge = 2.0)]
    value: u64,
}
fn main() {}
